[tool.poetry]
name = "happier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
isort = {extras = ["requirements", "pipenv"], version = "^4.3.21"}
pylint = "^2.5.3"
autoflake = "^1.3.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
